--- a/SpeakApper.AI/GoogleService-Info.plist
+++ b/SpeakApper.AI/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCZ-wTLRP0m8J2TlfRs5FEvg2Pcg28gmjM</string>
+	<string>AIzaSyCQcYbBeetfbDsATN7HmL0TYFR1UpWLl0g</string>
 	<key>GCM_SENDER_ID</key>
-	<string>671660046427</string>
+	<string>991157830608</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>app.speakapper.spk</string>
 	<key>PROJECT_ID</key>
-	<string>speakapper</string>
+	<string>speakerapp-94a29</string>
 	<key>STORAGE_BUCKET</key>
-	<string>speakapper.firebasestorage.app</string>
+	<string>speakerapp-94a29.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:671660046427:ios:79ed33280847cca0eee77e</string>
+	<string>1:991157830608:ios:1a98293e3d2d8e9c9b2fd5</string>
 </dict>
 </plist>
