--- a/SpeakApper.AI.xcodeproj/xcshareddata/xcschemes/SpeakApper.AI.xcscheme
+++ b/SpeakApper.AI.xcodeproj/xcshareddata/xcschemes/SpeakApper.AI.xcscheme
@@ -74,6 +74,9 @@
             ReferencedContainer = "container:SpeakApper.AI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../SpeakApper.AI/Store/Products.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
