--- a/SpeakApper.AI.xcodeproj/xcshareddata/xcschemes/SpeakApper.AI.xcscheme
+++ b/SpeakApper.AI.xcodeproj/xcshareddata/xcschemes/SpeakApper.AI.xcscheme
@@ -75,7 +75,7 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <StoreKitConfigurationFileReference
-         identifier = "../../SpeakApper.AI/Store/Products.storekit">
+         identifier = "../../SpeakApper.AI/Store/Speak Apper: AI transcribe.storekit">
       </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
